--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ img {
     width: 50px;
     height: 50px;
 }
+
+#heroName, #health, #weaponType, #weaponDamage {
+    margin-left: 40px;
+    padding: 20px;
+    color: brown;
+}
